--- a/car-dealer-app/src/containers/SignIn.css
+++ b/car-dealer-app/src/containers/SignIn.css
@@ -22,3 +22,9 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+#submitListingHeader {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
