--- a/car-dealer-app/src/containers/Home.css
+++ b/car-dealer-app/src/containers/Home.css
@@ -1,5 +1,5 @@
 .Home .lander {
-  padding: 80px 0;
+  padding: 80px 0px 0px 0px;
   text-align: center;
 }
 
@@ -34,3 +34,7 @@
 	-moz-animation-duration:1s;
 	animation-duration:1s;
 }
+
+th {
+	cursor: pointer;
+  }
